Spacing on search page This commit fixes spacing on the search results page. It also adds a default `margin-top` to any `<div>` tag following a `<h1>`.

--- a/css/dta-gov-au.styles.css
+++ b/css/dta-gov-au.styles.css
@@ -3612,6 +3612,8 @@ main[role="main"].page-content {
     font-size: 2.5rem;
     line-height: 1.5;
     line-height: 1.25; }
+    main[role="main"].page-content h1 + div {
+      margin-top: 1.5rem; }
   main[role="main"].page-content nav.au-inpage-nav-links {
     margin: 48px 0;
     margin: 3rem 0;
